static/css/timetable/timetable.css
/* ... */
#summary-type
{
    margin-top:1px;
    font-size: 0;
    line-height: 0;
}

.summary-type-elem
{
    display:inline-block;
    width:40%;
    text-align:left;
    margin-top:8px;
}
.summary-type-elem-left
{
    margin-left:10%;
    clear:both;

}
.summary-type-elem-right
{
}

.summary-type-elem span
{
    display:inline-block;
    font-size: 12px;
    line-height: 13px;
    margin-right: 4px;
}

.summary-type-elem-title
{
    font-weight: bold;
    display: inline-block;
    white-space: nowrap;
}
.summary-type-elem-title.fixed-ko
{
    width: 23px;
}
.summary-type-elem-title.fixed-en
{
    width: 23px;
}

.summary-type-elem-body.active
{
    color:#e64c65;
}

.summary-type-elem-additional
{
    color:#e64c65;
}

#summary-credit
{
    margin-top: calc(1.4vh);
    margin-bottom: calc(1.4vh);
    text-align:center;
}

.summary-credit-elem
{
    width:69px;
    width: calc(3.5vh + 34px);
    display:inline-block;
    vertical-align:top;
}

#credits>.active,
#au>.active
{
    color:#e64c65;
}

#summary-score
{
    margin-top: calc(1.4vh);
    text-align:center;
}

.summary-score-elem
{
    width:69px;
    width: calc(3.5vh + 34px);
    display:inline-block;
    vertical-align:top;
}

.summary-score-elem .score-text.active
{
    color:#e64c65;
}





/* Exam at right side */

#examtitle
{
    text-align:center;
    font-size:13px;
    line-height:14px;
    padding-top:9px;
    padding-bottom:8px;
}

.exam-day
{
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
    width:100%;
    text-align:left;
    margin-bottom:2px;
    padding-right:10px;
}

.exam-day-title
{
    margin-bottom:6px;
    margin-right:4px;
    white-space:nowrap;
}
.exam-day-title.fixed-ko
{
    width:12px;
}
.exam-day-title.fixed-en
{
    width:23px;
}

.exam-day-body
{
    list-style:none;
    padding-left:0;
    margin-bottom:0;
    display:flex;
    flex-direction:column;
}

.exam-elem
{
    margin-bottom:6px;
}
.exam-elem.active {
    color:#E54C65;
}

.exam-elem-title
{
    font-weight:bold;
    margin-bottom:1px;
}





/* Share at right side*/

#share-buttons
{
    flex:none;
    margin-top:10px;
    border-top:1px solid #EDD1DC;
	padding-top:10px;
    font-size:0px;
}

.share-button
{
    display:inline-block;
    height:19px;
    width:19px;
    margin-right:10px;
    cursor:pointer;
    vertical-align:top;
}

.share-button#facebook
{
    background: url(/media/icons/share_facebook.svg) no-repeat center center;
}
.share-button#facebook:hover
{
    background-image: url(/media/icons/share_facebook_hover.svg);
}

.share-button#image
{
    background: url(/media/icons/share_image.svg) no-repeat center center;
}
.share-button#image:hover
{
    background-image: url(/media/icons/share_image_hover.svg);
}

.share-button#calendar
{
    background: url(/media/icons/share_calendar.svg) no-repeat center center;
}
.share-button#calendar:hover
{
    background-image: url(/media/icons/share_calendar_hover.svg);
}

#lecture-tabs
{
    margin-bottom:3px;
    cursor:pointer;
}

#lecture-contents
{
    clear:both;
    padding:5px;
}

#department
{
    width:100%;
}

#keyword
{
    width:100%;
}

#classfication
{
    width:100%;
}

.lecture-block
{
    position:absolute;
    -webkit-box-flex:1;
        -ms-flex:auto;
            flex:auto;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    display:-webkit-flex;
    -webkit-box-orient:vertical;
    -webkit-box-direction:normal;
        -ms-flex-direction:column;
            flex-direction:column;
    justify-content:center;
    padding:0px;
    border-radius:2px;
    z-index:2;
    top: 1px;
    left: -1px;
    width: calc(100% + 2px);
    cursor:pointer;
}
body .lecture-block.click,
body .lecture-block.active
{
    background-color:#E0546F;
    color:#FFFFFF;
}
body .lecture-block.active.lecture-block-temp
{
    background-color:#E56C85;
    z-index: 3;
}
.lecture-block.click
{
    margin-top:-3px;
    margin-bottom:3px;
    box-shadow: 0 3px 0 0 #825c61;
}

.lecture-block.color1
{
    background-color: #F2CECE;
}
.lecture-block.color2
{
    background-color: #F4AEAE;
}
.lecture-block.color3
{
    background-color: #F2BCA0;
}
.lecture-block.color4
{
    background-color: #F1D6B2;
}
.lecture-block.color5
{
    background-color: #F1E1A9;
}
.lecture-block.color6
{
    background-color: #f4f2b3;
}
.lecture-block.color7
{
    background-color: #dbf4be;
}
.lecture-block.color8
{
    background-color: #beedd7;
}
.lecture-block.color9
{
    background-color: #b7e2de;
}
.lecture-block.color10
{
    background-color: #c9eaf4;
}
.lecture-block.color11
{
    background-color: #b4c9ed;
}
.lecture-block.color12
{
    background-color: #b4bbef;
}
.lecture-block.color13
{
    background-color: #c4c3e5;
}
.lecture-block.color14
{
    background-color: #bcabef;
}
.lecture-block.color15
{
    background-color: #e1caef;
}
.lecture-block.color16
{
    background-color: #f4badb;
}

.lecture-block-content
{
    padding: 4px 6px;
    overflow:hidden;
}

.timetable-lecture-name
{
    font-size:11px;
    line-height:12px;
    color:rgba(0,0,0,0.8);
    margin:0;
    margin-bottom:1px;
    pointer-events:none;
}
.lecture-block.click .timetable-lecture-name,
.lecture-block.active .timetable-lecture-name
{
    color:rgba(255,255,255,1);
}

.timetable-lecture-info
{
    font-size:11px;
    line-height:12px;
    color:rgba(0,0,0,0.5);
    margin:0;
    margin-top:1px;
    pointer-events:none;
}
.lecture-block.click .timetable-lecture-info,
.lecture-block.active .timetable-lecture-info
{
    color:rgba(255,255,255,0.7);
}

.lecture-delete
{
    top:0px;
    right:0px;
    position:absolute;
    cursor:pointer;
    padding:4px;
    background-color:rgba(224,84,111,0.8);
}
/* ... */

